tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_non_u32_as_array_length/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:5:21
  │
5 │             let _a: [u32; ARRAY_LEN] = [1, 2, 3];
  │                     ---------------- expected `u32`, found `u8`
  │

Aborting due to 1 previous error
