tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_non_u32_as_array_length/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The numeric generic is not of type `u32`
  ┌─ src/main.nr:5:21
  │
5 │             let _a: [u32; ARRAY_LEN] = [1, 2, 3];
  │                     ---------------- expected `u32`, found `u8`
  │

Aborting due to 1 previous error
